package behavioral.observer.btthuchanh_CA6;

public interface PlayerDataListener {
    void listen(PlayerData data);
}
